--- a/TEST/Dockerfile.scratch
+++ b/TEST/Dockerfile.scratch
@@ -1,5 +1,7 @@
 FROM scratch
-COPY hello /
-CMD ["/hello"]
+#COPY hello /
+RUN echo hi
+#CMD ["/hello"]
+CMD echo bye
 
 #https://github.com/tianon/dockerfiles/blob/master/true/Dockerfile
