--- a/circle.yml
+++ b/circle.yml
@@ -5,5 +5,5 @@ machine:
 dependencies:
   override:
     - docker info
-    - ls -l ./TEST/Dockerfile.scratch
-    - docker build -t scratch1 ./TEST/Dockerfile.scratch
+    - ls -l ./TEST/Dockerfile-scratch
+    - docker build -t scratch1 ./TEST/Dockerfile-scratch
