--- a/test/scratch/Dockerfile
+++ b/test/scratch/Dockerfile
@@ -1,7 +1,8 @@
 FROM scratch
 #COPY hello /
-RUN echo hi
-#CMD ["/hello"]
-CMD echo bye
+RUN touch 1.txt
+RUN echo hello world > 1.txt
+#CMD ["", "/hello"]
+
 
 #https://github.com/tianon/dockerfiles/blob/master/true/Dockerfile
