--- a/test/scratch/Dockerfile
+++ b/test/scratch/Dockerfile
@@ -1,8 +1,8 @@
 FROM scratch
 #COPY hello /
-RUN touch 1.txt
-RUN echo hello world > 1.txt
-#CMD ["", "/hello"]
+RUN /bin/sh touch 1.txt
+RUN bin/sh -c 'echo hello world > 1.txt'
+CMD ["/bin/sh", "cat 1.txt"]
 
 
 #https://github.com/tianon/dockerfiles/blob/master/true/Dockerfile
