--- a/circle.yml
+++ b/circle.yml
@@ -9,4 +9,4 @@ dependencies:
     #- docker build -t scratch1 ./test/scratch
     #- docker build -t runner - < Dockerfile.runner
     
-    - docker build -t runner - < ./test/scratch/Dockerfile
+    - docker build -t runner - < ./test/Dockerfile.scratch
