--- a/circle.yml
+++ b/circle.yml
@@ -8,4 +8,6 @@ dependencies:
     - ls -l ./test/Dockerfile.scratch
     #- docker build -t scratch1 ./test/scratch
     #- docker build -t runner - < Dockerfile.runner
-    - docker build -t runner - < ./test/Dockerfile.scratch
+   # - docker build -t ubuntu1 - < ./test/Dockerfile.scratch
+    - docker build -t mongo1  - < ./test/Dockerfile.mongo
+
