--- a/circle.yml
+++ b/circle.yml
@@ -9,5 +9,5 @@ dependencies:
     #- docker build -t scratch1 ./test/scratch
     #- docker build -t runner - < Dockerfile.runner
    # - docker build -t ubuntu1 - < ./test/Dockerfile.scratch
-    - docker build -t mongo1  - < ./test/Dockerfile.mongo
+    - docker build -t runner - < ./test/Dockerfile.mongo
 
