Update and rename Dockerfile.ruby to Dockerfile.apt

--- a/test/Dockerfile.apt
+++ b/test/Dockerfile.apt
@@ -1,6 +1,6 @@
 FROM ubuntu:precise
 MAINTAINER Joel Wurtz <jwurtz@jolicode.com>
-ENV HOME /home
+#############################################sources
 # Add apt repository needed
 RUN echo 'deb http://archive.ubuntu.com/ubuntu precise main universe' > /etc/apt/sources.list  && \
     echo 'deb http://archive.ubuntu.com/ubuntu precise-security main universe' >> /etc/apt/sources.list && \
@@ -9,17 +9,16 @@ RUN echo 'deb http://archive.ubuntu.com/ubuntu precise main universe' > /etc/apt
     echo 'deb-src http://archive.ubuntu.com/ubuntu precise main universe' >> /etc/apt/sources.list && \
     echo 'deb-src http://archive.ubuntu.com/ubuntu precise-security main universe' >> /etc/apt/sources.list && \
     echo 'deb-src http://archive.ubuntu.com/ubuntu precise-updates main universe' >> /etc/apt/sources.list && \
-    echo 'deb-src http://archive.ubuntu.com/ubuntu precise-backports main restricted universe multiverse' >> /etc/apt/sources.list && \
-    mkdir -p $HOME && \
-    apt-get update && \
-    apt-get install -y python-software-properties git curl wget sudo && \
-    apt-get clean && \
+    echo 'deb-src http://archive.ubuntu.com/ubuntu precise-backports main restricted universe multiverse' >> /etc/apt/sources.list
+#############################################update
+RUN apt-get update
+#############################################install
+RUN apt-get install -y python-software-properties git curl wget sudo build-essential subversion autoconf libpq-dev libsqlite3-dev libmysqlclient-dev zlib1g-dev libssl-dev libreadline-dev libyaml-dev libxml2-dev libxslt-dev \
+    build-essential libssl-dev libmysqlclient-dev
+
+#############################################clean
+RUN apt-get clean && \
     rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
-
-
-# Install deps
-RUN apt-get install -y build-essential subversion autoconf libpq-dev libsqlite3-dev libmysqlclient-dev zlib1g-dev libssl-dev libreadline-dev libyaml-dev libxml2-dev libxslt-dev
-RUN sudo apt-get update && \
-    sudo apt-get install -y build-essential libssl-dev libmysqlclient-dev && \
-    sudo apt-get clean && \
-    sudo rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
+    
+#ENV HOME /home    
+#RUN    mkdir -p $HOME && \
