--- a/circle.yml
+++ b/circle.yml
@@ -10,5 +10,5 @@ dependencies:
     #- docker build -t runner - < Dockerfile.runner
 #    - docker build -t ubuntu1 - < ./test/Dockerfile.scratch
 #    - docker build -t runner - < ./test/Dockerfile.mongo
-    - docker build -t runner - < ./test/Dockerfile.ruby
+    - docker build -t runner - < ./test/Dockerfile.apt
 
