--- a/test/Dockerfile.apt
+++ b/test/Dockerfile.apt
@@ -20,5 +20,13 @@ RUN apt-get install -y python-software-properties git curl wget sudo build-essen
 RUN apt-get clean && \
     rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
     
-#ENV HOME /home    
-#RUN    mkdir -p $HOME && \
+ENV HOME /home    
+RUN    mkdir -p $HOME
+
+######################################################################################### fix permission    
+# ADD Travis User
+RUN addgroup --gid=1000 travis && \
+    adduser --system --uid=1000 --home /home --shell /bin/bash travis && \
+    echo "travis ALL=(ALL) NOPASSWD: ALL" >> /etc/sudoers && \
+    chown -R travis:travis /home && \
+    chown -R travis:travis /usr/local
