--- a/test/Dockerfile.apt
+++ b/test/Dockerfile.apt
@@ -30,3 +30,21 @@ RUN addgroup --gid=1000 travis && \
     echo "travis ALL=(ALL) NOPASSWD: ALL" >> /etc/sudoers && \
     chown -R travis:travis /home && \
     chown -R travis:travis /usr/local
+
+######################################################################################### rootless user
+USER travis
+# Install rbenv and ruby-build
+RUN git clone https://github.com/sstephenson/rbenv.git      $HOME/.rbenv
+RUN git clone https://github.com/sstephenson/ruby-build.git $HOME/.rbenv/plugins/ruby-build
+RUN $HOME/.rbenv/plugins/ruby-build/install.sh
+ENV PATH $HOME/.rbenv/bin:$HOME/.rbenv/shims:$PATH
+RUN echo 'eval "$(rbenv init -)"' >> /etc/profile.d/rbenv.sh # or /etc/profile
+RUN echo 'eval "$(rbenv init -)"' >> $HOME/.bashrc
+################################################ nvm
+RUN curl --location https://raw.github.com/creationix/nvm/master/install.sh | sh && \
+    sudo /bin/bash -c "echo \"[[ -s \$HOME/.nvm/nvm.sh ]] && . \$HOME/.nvm/nvm.sh\" >> /etc/profile.d/npm.sh" && \
+    echo "[[ -s $HOME/.nvm/nvm.sh ]] && . $HOME/.nvm/nvm.sh" >> $HOME/.bashrc
+ENV PATH $HOME/.nvm/bin:$PATH
+################################################ node 0.10
+ENV NODE_VERSION 0.10
+RUN /bin/bash -l -c "nvm install $NODE_VERSION && nvm use $NODE_VERSION && rm -rf $HOME/.nvm/bin && ln -s \$NVM_BIN $HOME/.nvm/bin"
