--- a/test/Dockerfile.apt
+++ b/test/Dockerfile.apt
@@ -19,10 +19,9 @@ RUN apt-get install -y python-software-properties git curl wget sudo build-essen
 #############################################clean
 RUN apt-get clean && \
     rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
-    
-ENV HOME /home    
+###################################################### regular users
+#ENV HOME /home    
 RUN    mkdir -p $HOME
-
 ######################################################################################### fix permission    
 # ADD Travis User
 RUN addgroup --gid=1000 travis && \
