--- a/test/Dockerfile.apt
+++ b/test/Dockerfile.apt
@@ -1,5 +1,7 @@
 FROM ubuntu:precise
 MAINTAINER Joel Wurtz <jwurtz@jolicode.com>
+ENV HOME /home
+RUN mkdir -p $HOME
 #############################################sources
 # Add apt repository needed
 RUN echo 'deb http://archive.ubuntu.com/ubuntu precise main universe' > /etc/apt/sources.list  && \
@@ -15,13 +17,11 @@ RUN apt-get update
 #############################################install
 RUN apt-get install -y python-software-properties git curl wget sudo build-essential subversion autoconf libpq-dev libsqlite3-dev libmysqlclient-dev zlib1g-dev libssl-dev libreadline-dev libyaml-dev libxml2-dev libxslt-dev \
     build-essential libssl-dev libmysqlclient-dev
-
 #############################################clean
 RUN apt-get clean && \
     rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 ###################################################### regular users
-#ENV HOME /home    
-RUN    mkdir -p $HOME
+
 ######################################################################################### fix permission    
 # ADD Travis User
 RUN addgroup --gid=1000 travis && \
@@ -29,7 +29,6 @@ RUN addgroup --gid=1000 travis && \
     echo "travis ALL=(ALL) NOPASSWD: ALL" >> /etc/sudoers && \
     chown -R travis:travis /home && \
     chown -R travis:travis /usr/local
-
 ######################################################################################### rootless user
 USER travis
 # Install rbenv and ruby-build
