--- a/circle.yml
+++ b/circle.yml
@@ -5,10 +5,19 @@ machine:
 dependencies:
   override:
     - docker info
-    - ls -l ./test/Dockerfile.scratch
+    - docker pull brownman/onbuild
+
+test:
+  override:
+    - sudo chmod +x ./test.sh
+    - sudo chmod +x ./run.sh
+    - ./test.sh env
+    - ./run.sh 
+
+  #  - ls -l ./test/Dockerfile.scratch
     #- docker build -t scratch1 ./test/scratch
     #- docker build -t runner - < Dockerfile.runner
 #    - docker build -t ubuntu1 - < ./test/Dockerfile.scratch
 #    - docker build -t runner - < ./test/Dockerfile.mongo
-    - docker build -t runner - < ./test/Dockerfile.apt
+  #  - docker build -t runner - < ./test/Dockerfile.apt
 
