--- a/CFG/vars.cfg
+++ b/CFG/vars.cfg
@@ -1,9 +1,9 @@
-
+############################################ cases
+cmd_gitlab_register='. ~/.profile && ./runner/bin/setup_and_run'
 ############################################ 2 base containers
 CONTAINER_APP='brownman/onbuild' 
 CONTAINER_DB='brownman/mongo'         
 #CONTAINER_DB='dockerfile/mongodb'
-
 ############################################ aliases
 alias_mongo='mongo_deamon'
 ############################################ docker flags
@@ -24,6 +24,3 @@ cmd_validate_mongo_netstat='sudo netstat -ntlp | grep mongo'
 cmd_validate_mongo_env='env | grep db'
 #cmd_validate_mongo_localhost=${1:-$cmd_netstat}
 cmd_validate_mongo_container_up="sudo docker ps | grep $alias_mongo"
-######################################### FINALLY
-cmd_app="docker run --link $alias_mongo:db $volume_extra $flag_docker $opts_gitlab $CONTAINER_APP bash -c '$cmd_validate_env_mongo'"
-cmd_mongo="docker run $volume_data $flag_ports -d --name $alias_mongo $CONTAINER_DB mongod $flag_mongo"
