--- a/circle.yml
+++ b/circle.yml
@@ -2,6 +2,11 @@ machine:
   services:
     - docker
 
+  environment:   
+    timeout: 600
+    file_test:      'tests/link_containers_mongo_and_onbuild.sh'
+
+
 dependencies:
   override:
     - docker info
