--- a/CFG/container.cfg
+++ b/CFG/container.cfg
@@ -1,10 +1,11 @@
 ######################################### RUN / LINK  -2-  CONTAINERS
 run_mongo_start(){
-docker run --link $alias_mongo:db $volume_extra $flag_docker $opts_gitlab $CONTAINER_APP bash -c "'$cmd_validate_env_mongo'"
+local cmd="${1:-cmd_validate_mongo_env}"
+commander "docker run --link $alias_mongo:db $volume_extra $flag_docker $opts_gitlab $CONTAINER_APP bash -c \"'$cmd'\""
 }
 
 run_mongo_link(){
-docker run $volume_data $flag_ports -d --name $alias_mongo $CONTAINER_DB mongod $flag_mongo
+commander "docker run $volume_data $flag_ports -d --name $alias_mongo $CONTAINER_DB mongod $flag_mongo"
 }
 
 export -f run_mongo_start
