--- a/CFG/vars.cfg
+++ b/CFG/vars.cfg
@@ -19,7 +19,8 @@ opts_gitlab="-e HOME=/home/gitlab_ci_runner     -e CI_SERVER_URL=$CI_SERVER_URL 
 ########################################### mongo conf
 flag_ports='-p 27017:27017 -p 28017:28017'
 flag_mongo="--rest --httpinterface --smallfiles"
-##########################################  validate
+##########################################  validations:
+#validate mongo is running: 
 cmd_validate_mongo_netstat='sudo netstat -ntlp | grep mongo'
 cmd_validate_mongo_env='env | grep db'
 #cmd_validate_mongo_localhost=${1:-$cmd_netstat}
