[.cfg] +validate disk space !

--- a/CFG/helper.cfg
+++ b/CFG/helper.cfg
@@ -7,7 +7,14 @@ commander(){
     local cmd="${args[@]}"
     echo "[CMD] $cmd"
     eval "$cmd"
+   local res=$?
+trace "[res] $res" 
+return $res
 }
 
+commander_exit(){
+commander $@ || { exit 1; }
+}
 export -f commander
 export -f trace
+export -f commander_exit
