--- a/CFG/vars.cfg
+++ b/CFG/vars.cfg
@@ -7,15 +7,13 @@ CONTAINER_DB='brownman/mongo'
 ############################################ aliases
 alias_mongo='mongo_deamon'
 ############################################ docker flags
-flag_docker_interactive='-i -t --rm'
-flag_docker_deamon='-d -t'
-
+flag_docker_interactive='-i --rm'
+flag_docker_deamon='-d'
 ############################################ volumes
 volume_extra='-v /extra:/extra'
 volume_data='-v /data:/data'
 ########################################### gitlab params
 opts_gitlab="-e HOME=/home/gitlab_ci_runner     -e CI_SERVER_URL=$CI_SERVER_URL     -e REGISTRATION_TOKEN=$REGISTRATION_TOKEN     -e GITLAB_SERVER_FQDN=git.mean.io"
-
 ########################################### mongo conf
 flag_ports='-p 27017:27017 -p 28017:28017'
 flag_mongo="--rest --httpinterface --smallfiles"
