--- a/CFG/container.cfg
+++ b/CFG/container.cfg
@@ -1,12 +1,30 @@
 ######################################### RUN / LINK  -2-  CONTAINERS
-run_mongo_start(){
-local cmd="${1:-cmd_validate_mongo_env}"
-commander "docker run --link $alias_mongo:db $volume_extra $flag_docker $opts_gitlab $CONTAINER_APP bash -c \"'$cmd'\""
+#docker run --link mongo_deamon:db -v /extra:/extra -i -t -e HOME=/home/gitlab_ci_runner -e CI_SERVER_URL=http://ci0.mean.io -e REGISTRATION_TOKEN=71f4b1fe380484bc57ad -e GITLAB_SERVER_FQDN=git.mean.io brownman/onbuild bash -c i
+
+
+run_webapp(){
+set -u
+#cases: deamon or interactive
+local flag_docker
+local case="${1:-deamon}"
+local cmd_start='. ~/.profile && $HOME/runner/bin/setup_and_run'
+
+if [ "$case" = deamon ];then
+	flag_docker='-d'
+else
+	flag_docker='-i --rm'
+fi
+
+commander "docker run --link $alias_mongo:db $volume_extra  $opts_gitlab $flag_docker -t $CONTAINER_APP bash -c '$cmd_start'"
 }
 
-run_mongo_link(){
-commander "docker run $volume_data $flag_ports -d --name $alias_mongo $CONTAINER_DB mongod $flag_mongo"
+run_mongo(){
+set -u
+commander "docker run $volume_data $flag_ports -d --name $alias_mongo $CONTAINER_DB sh -c 'mongod $flag_mongo'"
+#docker ps
+{ docker ps  | grep mongo; } || { trace ERR mongo container is down; exit 1; }
+
 }
 
-export -f run_mongo_start
-export -f run_mongo_link
+export -f run_webapp
+export -f run_mongo
