--- a/CFG/validate.cfg
+++ b/CFG/validate.cfg
@@ -10,4 +10,11 @@ else
 trace we have enough  space: $num
 fi
 }
+
+validate_volume_mongo(){
+  echo 'validating existance of local dir: /data/db'
+  ( test -d /data/db ) || ( sudo mkdir -p /data/db )
+}
+
 export -f validate_space
+export -f validate_volume_mongo
