--- a/CFG/vars.cfg
+++ b/CFG/vars.cfg
@@ -23,3 +23,5 @@ cmd_validate_mongo_netstat='sudo netstat -ntlp | grep mongo'
 cmd_validate_mongo_env='env | grep db'
 #cmd_validate_mongo_localhost=${1:-$cmd_netstat}
 cmd_validate_mongo_container_up="sudo docker ps | grep $alias_mongo"
+########################################### CONST
+DISKSPACE_PERCENT=80
