--- a/CFG/vars.cfg
+++ b/CFG/vars.cfg
@@ -25,3 +25,4 @@ cmd_validate_mongo_env='env | grep db'
 cmd_validate_mongo_container_up="sudo docker ps | grep $alias_mongo"
 ########################################### CONST
 DISKSPACE_PERCENT=80
+MONGO_PORT1=27017
