--- a/CFG/validate.cfg
+++ b/CFG/validate.cfg
@@ -1,20 +1,40 @@
-validate_space(){
-declare -i num
-local str=$( df -l | awk '{print $5}' | head -2 | tail -1 | sed 's/%//g' )
-let "num=$str"
-if [ $num -gt 80 ];then
-trace ERR not enough disk space
-df -l
-exit 1
-else 
-trace we have enough  space: $num
-fi
+
+
+ensure(){
+#CONVENTION: use suffix: _validate | for declaring func as writable
+set -e
+local str="$1"
+
+case "$str" in:
+'disk_space')
+  declare -i num
+  local str=$( df -l | awk '{print $5}' | head -2 | tail -1 | sed 's/%//g' )
+  let "num=$str"
+  if [ $num -gt $DISKSPACE_PERCENT ];then
+    trace ERR not enough disk space
+    df -l
+    exit 1
+  else 
+     trace we have enough  space: $num
+  fi
+;;
+'mongo_volume_validate')
+  ( test -d /data/db ) || { sudo mkdir -p /data/db; }
+  ;;
+'mongo_container')
+  docker ps  | grep mongo
+;;
+'mongo_localhost')
+  netstat -ntlp | grep $MONGO_PORT1
+;;
+
+**)
+trace "[ERR] no such case: $str"
+;;
+esac
+
+set +e
 }
 
-validate_volume_mongo(){
-  echo 'validating existance of local dir: /data/db'
-  ( test -d /data/db ) || ( sudo mkdir -p /data/db )
-}
 
-export -f validate_space
-export -f validate_volume_mongo
+export -f ensure
