--- a/CFG/validate.cfg
+++ b/CFG/validate.cfg
@@ -1,9 +1,15 @@
-
+##########################################  validations:
+#validate mongo is running: 
+#cmd_validate_mongo_netstat='sudo netstat -ntlp | grep mongo'
+#cmd_validate_mongo_localhost=${1:-$cmd_netstat}
+#cmd_validate_mongo_container_up="sudo docker ps | grep $alias_mongo"
 
 ensure(){
 #CONVENTION: use suffix: _validate | for declaring func as writable
 set -e
 local str="$1"
+
+
 
 case "$str" in:
 'disk_space')
