--- a/CFG/validate.cfg
+++ b/CFG/validate.cfg
@@ -27,7 +27,7 @@ case "$str" in:
 'mongo_volume_validate')
   ( test -d /data/db ) || { sudo mkdir -p /data/db; }
   ;;
-'mongo_container')
+'mongo_container_alive')
   docker ps  | grep mongo
 ;;
 'mongo_localhost')
