--- a/CFG/container.cfg
+++ b/CFG/container.cfg
@@ -1,24 +1,38 @@
 ######################################### RUN / LINK  -2-  CONTAINERS
 #docker run --link mongo_deamon:db -v /extra:/extra -i -t -e HOME=/home/gitlab_ci_runner -e CI_SERVER_URL=http://ci0.mean.io -e REGISTRATION_TOKEN=71f4b1fe380484bc57ad -e GITLAB_SERVER_FQDN=git.mean.io brownman/onbuild bash -c i
 
+run_webapp(){
+  local cmd_start="$1"
+  local docker_flag="$2"
+  commander "docker run --link $alias_mongo:db $volume_extra  $opts_gitlab $flag_docker -t $CONTAINER_APP bash -c '$cmd_start'"
+}
 
 run_webapp_deamon(){
-set -u
-#cases: deamon or interactive
-local case="${1:-deamon}"
-local cmd_start='. ~/.profile && $HOME/runner/bin/setup_and_run'
+  set -u
+  local cmd='. ~/.profile && $HOME/runner/bin/setup_and_run'
+  local	flag_docker='-d'
+  run_webapp "$cmd" "$flag_docker"
+}
 
-local	flag_docker='-d'
-#local 	flag_docker='-i --rm'
-commander "docker run --link $alias_mongo:db $volume_extra  $opts_gitlab $flag_docker -t $CONTAINER_APP bash -c '$cmd_start'"
+run_webapp_interactive(){
+  set -u
+  local cmd='bash'
+  local	flag_docker='-i --rm'
+  run_webapp "$cmd" "$flag_docker"
 }
 
 run_mongo(){
 #use ensure
-set -u
-ensure mongo_down && { commander "docker run $volume_data $flag_ports -d --name $alias_mongo $CONTAINER_DB sh -c 'mongod $flag_mongo'"; }
+ commander "docker run $volume_data $flag_ports -d --name $alias_mongo $CONTAINER_DB sh -c 'mongod $flag_mongo'"; 
+}
+
+run_mongo_wrapper(){
+( ensure mongo_container_alive ) || { commander_exit run_mongo; }
 ensure mongo_up
 }
 
 export -f run_webapp
 export -f run_mongo
+export -f run_mongo_wrapper
+export -f run_webapp_interactive
+export -f run_webapp_deamon
