--- a/CFG/container.cfg
+++ b/CFG/container.cfg
@@ -28,7 +28,7 @@ run_mongo(){
 
 run_mongo_wrapper(){
 ( ensure mongo_container_alive ) || { commander_exit run_mongo; }
-ensure mongo_up
+ensure mongo_container_alive
 }
 
 export -f run_webapp
