--- a/CFG/validate.cfg
+++ b/CFG/validate.cfg
@@ -8,10 +8,10 @@ ensure(){
 #CONVENTION: use suffix: _validate | for declaring func as writable
 set -e
 local str="$1"
-
-
-
 case "$str" in:
+'rm_containers')
+  $dir_root/DOCKER/rm_containers.sh
+;;
 'disk_space')
   declare -i num
   local str=$( df -l | awk '{print $5}' | head -2 | tail -1 | sed 's/%//g' )
@@ -33,9 +33,8 @@ case "$str" in:
 'mongo_localhost')
   netstat -ntlp | grep $MONGO_PORT1
 ;;
-
 **)
-trace "[ERR] no such case: $str"
+  trace "[ERR] no such case: $str"
 ;;
 esac
 
