--- a/CFG/validate.cfg
+++ b/CFG/validate.cfg
@@ -8,7 +8,7 @@ ensure(){
 #CONVENTION: use suffix: _validate | for declaring func as writable
 set -e
 local str="$1"
-case "$str" in:
+case "$str" in
 'rm_containers')
   $dir_root/DOCKER/rm_containers.sh
 ;;
