--- a/config.cfg
+++ b/config.cfg
@@ -1,9 +1,11 @@
 source_all(){
-list=$( ls -l1 CFG/ )
+local dir=$dir_root/CFG/
+local list=$( ls -1 $dir )
+local file
 
 for item in $list;do
-file=CFG/$item
-test -f $file && { source $file; }
+  file=CFG/$item
+  test -f $file && { source $file; }
 done
 }
 
