--- a/config.cfg
+++ b/config.cfg
@@ -1,6 +1,6 @@
 source_all(){
 local dir=$dir_root/CFG/
-local list=$( ls -1 $dir )
+local list=$( ls -1 $dir/*.cfg )
 local file
 
 for item in $list;do
