--- a/config.cfg
+++ b/config.cfg
@@ -1,10 +1,11 @@
 source_all(){
-local dir=$dir_root/CFG/
+set -u
+local dir="$dir_root/CFG"
 local list=$( ls -1 $dir/*.cfg )
 local file
 
 for item in $list;do
-  file=CFG/$item
+  file=$dir/$item
   test -f $file && { source $file; }
 done
 }
