--- a/config.cfg
+++ b/config.cfg
@@ -1,7 +1,7 @@
 source_all(){
 set -u
 local dir="$dir_root/CFG"
-local list=$( ls -1 $dir/*.cfg )
+local list=$( ls -1 $dir )
 local file
 
 for item in $list;do
