--- a/CFG/validate.cfg
+++ b/CFG/validate.cfg
@@ -9,7 +9,7 @@ ensure(){
 set -e
 local str="$1"
 case "$str" in
-'rm_containers')
+'containers_not_running')
   $dir_root/DOCKER/rm_containers.sh
 ;;
 'disk_space')
