--- a/CFG/validate.cfg
+++ b/CFG/validate.cfg
@@ -10,7 +10,7 @@ set -e
 local str="$1"
 case "$str" in
 'containers_not_running')
-  $dir_root/DOCKER/rm_containers.sh
+ test $(docker ps | wc -l) -gt 1 && { $dir_root/DOCKER/rm_containers.sh; }
 ;;
 'disk_space')
   declare -i num
