--- a/circle.yml
+++ b/circle.yml
@@ -19,7 +19,8 @@ test:
     - sudo pidof mongod | xargs sudo kill -9
     - sudo chmod +x *.sh . -R
     - ./circle.sh $dir_container
-    - export dir_root=$PWD; source config.cfg; ./tests/link_containers_mongo_and_onbuild.sh
+    - ./test.sh
+    
   #  - ls -l ./test/Dockerfile.scratch
     #- docker build -t scratch1 ./test/scratch
     #- docker build -t runner - < Dockerfile.runner
