--- a/CFG/container.cfg
+++ b/CFG/container.cfg
@@ -2,8 +2,8 @@
 #docker run --link mongo_deamon:db -v /extra:/extra -i -t -e HOME=/home/gitlab_ci_runner -e CI_SERVER_URL=http://ci0.mean.io -e REGISTRATION_TOKEN=71f4b1fe380484bc57ad -e GITLAB_SERVER_FQDN=git.mean.io brownman/onbuild bash -c i
 
 run_webapp(){
-  local cmd_start="$1"
-  local docker_flag="$2"
+  local cmd_start="${1:-'env'}"
+  local flag_docker="${2:-'-i'}"
   commander "docker run --link $alias_mongo:db $volume_extra  $opts_gitlab $flag_docker -t $CONTAINER_APP bash -c '$cmd_start'"
 }
 
