[run docker for selenium]

--- a/CFG/helper.cfg
+++ b/CFG/helper.cfg
@@ -6,7 +6,7 @@ commander(){
     local args=( $@ )
     local cmd="${args[@]}"
     echo "[CMD] $cmd"
-    eval "$cmd"
+    eval "$cmd" || { trace Err cmd; exit 0; }
    local res=$?
 trace "[res] $res" 
 return $res
