--- a/source.cfg
+++ b/source.cfg
@@ -1,3 +1,8 @@
+
+dir_root=${dir_root:-.}
+export CONTAINER=$( head -1 $dir_root/container; )
+echo 1>&2 CONTAINER: $CONTAINER
+
 source_all(){
 set -u
 local dir="$dir_root/CFG"
@@ -11,3 +16,4 @@ done
 }
 
 source_all
+#test 0 -eq $? && { trace ok; } || { trace err; }
