--- a/CFG/vars.cfg
+++ b/CFG/vars.cfg
@@ -3,9 +3,11 @@ cmd_gitlab_register='. ~/.profile && ./runner/bin/setup_and_run'
 ############################################ 2 base containers
 CONTAINER_APP='brownman/onbuild' 
 CONTAINER_DB='brownman/mongo'         
+CONTAINER_SEL='eperoumalnaik/docker-chrome-selenium'
 #CONTAINER_DB='dockerfile/mongodb'
 ############################################ aliases
-alias_mongo='mongo_deamon'
+alias_mongo="mongo_deamon$(date +%S)"
+alias_selenium="selenium_deamon$(date +%S)"
 ############################################ docker flags
 flag_docker_interactive='-i --rm'
 flag_docker_deamon='-d'
@@ -13,7 +15,9 @@ flag_docker_deamon='-d'
 volume_extra='-v /extra:/extra'
 volume_data='-v /data:/data'
 ########################################### mongo conf
+flag_ports_sel='-p 4444:4444'
 flag_ports='-p 27017:27017 -p 28017:28017'
+###sh -c cmds
 flag_mongo="--rest --httpinterface --smallfiles"
 ########################################### CONST
 DISKSPACE_PERCENT=80
