--- a/CONF/private.conf
+++ b/CONF/private.conf
@@ -1,2 +1,2 @@
 ########################################### gitlab params
-opts_gitlab="-e HOME=/home/gitlab_ci_runner     -e CI_SERVER_URL=$CI_SERVER_URL     -e REGISTRATION_TOKEN=$REGISTRATION_TOKEN     -e GITLAB_SERVER_FQDN=git.mean.io"
+export opts_gitlab="-e HOME=/home/gitlab_ci_runner     -e CI_SERVER_URL=$CI_SERVER_URL     -e REGISTRATION_TOKEN=$REGISTRATION_TOKEN     -e GITLAB_SERVER_FQDN=$GITLAB_SERVER_FQDN"
