--- a/source.cfg
+++ b/source.cfg
@@ -2,7 +2,8 @@
 dir_root=${dir_root:-.}
 export CONTAINER=$( head -1 $dir_root/container; )
 echo 1>&2 CONTAINER: $CONTAINER
-
+test -f ../gitlab.conf && { source ../gitlab.conf; } || true 
+source $dir_root/CONF/private.conf
 source_all(){
 set -u
 local dir="$dir_root/CFG"
@@ -16,4 +17,7 @@ done
 }
 
 source_all
+source $dir_root/CONF/private.conf
 #test 0 -eq $? && { trace ok; } || { trace err; }
+set +u
+set +e
