--- a/CFG/container.cfg
+++ b/CFG/container.cfg
@@ -1,11 +1,22 @@
 ######################################### RUN / LINK  -2-  CONTAINERS
 #docker run --link mongo_deamon:db -v /extra:/extra -i -t -e HOME=/home/gitlab_ci_runner -e CI_SERVER_URL=http://ci0.mean.io -e REGISTRATION_TOKEN=71f4b1fe380484bc57ad -e GITLAB_SERVER_FQDN=git.mean.io brownman/onbuild bash -c i
+run_sel(){
+$dir_root/TMP/link.sh
+}
 
 run_webapp(){
   local cmd_start="${1:-'env'}"
   local flag_docker="${2:-'-i'}"
+  commander "docker run --link $alias_selenium:selenium $volume_extra  $opts_gitlab $flag_docker -t $CONTAINER_APP bash -c '$cmd_start'"
+}
+
+
+run_webapp_old(){
+  local cmd_start="${1:-'env'}"
+  local flag_docker="${2:-'-i'}"
   commander "docker run --link $alias_mongo:db $volume_extra  $opts_gitlab $flag_docker -t $CONTAINER_APP bash -c '$cmd_start'"
 }
+
 
 run_webapp_deamon(){
   set -u
