./steps.sh - is working !

--- a/CFG/container.cfg
+++ b/CFG/container.cfg
@@ -7,6 +7,7 @@ $dir_root/TMP/link.sh
 run_webapp(){
   local cmd_start="${1:-'env'}"
   local flag_docker="${2:-'-i'}"
+local alias_selenium=$( $dir_root/DETECT/selenium_alias.sh )
   commander "docker run --link $alias_selenium:selenium $volume_extra  $opts_gitlab $flag_docker -t $CONTAINER_APP bash -c '$cmd_start'"
 }
 
