--- a/source.cfg
+++ b/source.cfg
@@ -12,7 +12,7 @@ local file
 
 for item in $list;do
   file=$dir/$item
-  test -f $file && { source $file; }
+  test -f $file && { commander source $file; }
 done
 }
 
