--- a/source.cfg
+++ b/source.cfg
@@ -1,9 +1,13 @@
-
 dir_root=${dir_root:-.}
+
+set_env(){
 export CONTAINER=$( head -1 $dir_root/container; )
-echo 1>&2 CONTAINER: $CONTAINER
-test -f ../gitlab.conf && { source ../gitlab.conf; } || true 
-source $dir_root/CONF/private.conf
+}
+
+intro(){
+echo 1>&2 container: $CONTAINER
+}
+
 source_all(){
 set -u
 local dir="$dir_root/CFG"
@@ -16,8 +20,19 @@ for item in $list;do
 done
 }
 
-source_all
+register_on_gitlab_ci(){
+echo 1>&2 CONTAINER: $CONTAINER
 source $dir_root/CONF/private.conf
-#test 0 -eq $? && { trace ok; } || { trace err; }
+}
+
+steps(){
+set_env
+intro
+source_all
+register_on_gitlab_ci
+}
+
+steps
+
 set +u
 set +e
