--- a/CONF/private.conf
+++ b/CONF/private.conf
@@ -1,2 +1,15 @@
+
+# setting for register server:gitlab-ci-runner  at the server:gitlab-ci
+#
+#
+#
+
+export CI_SERVER_URL=${CI_SERVER_URL:-x1}
+export REGISTRATION_TOKEN=${REGISTRATION_TOKEN:-x2}
+export CI_SERVER_URL=${CI_SERVER_URL:-x3}
+export GITLAB_SERVER_FQDN=${GITLAB_SERVER_FQDN:-x4}
+#spacific for docker-container: with repo: gitlab-ci-runner
+export HOME1=/home/gitlab_ci_runner
+
 ########################################### gitlab params
-export opts_gitlab="-e HOME=/home/gitlab_ci_runner     -e CI_SERVER_URL=$CI_SERVER_URL     -e REGISTRATION_TOKEN=$REGISTRATION_TOKEN     -e GITLAB_SERVER_FQDN=$GITLAB_SERVER_FQDN"
+export opts_gitlab="-e HOME=$HOME1     -e CI_SERVER_URL=$CI_SERVER_URL     -e REGISTRATION_TOKEN=$REGISTRATION_TOKEN     -e GITLAB_SERVER_FQDN=$GITLAB_SERVER_FQDN"
