--- a/CFG/container.cfg
+++ b/CFG/container.cfg
@@ -1,13 +1,34 @@
 ######################################### RUN / LINK  -2-  CONTAINERS
 #docker run --link mongo_deamon:db -v /extra:/extra -i -t -e HOME=/home/gitlab_ci_runner -e CI_SERVER_URL=http://ci0.mean.io -e REGISTRATION_TOKEN=71f4b1fe380484bc57ad -e GITLAB_SERVER_FQDN=git.mean.io brownman/onbuild bash -c i
+detecte_running(){
+local exp=${1:-sel};
+local str=$( docker ps | awk '{print $11}' | grep $exp )
+echo $str
+}
+
 run_sel(){
 $dir_root/TMP/link.sh
 }
 
+run_tests(){
+local file_test=${1:-$dir_root/BIN/test.sh}
+local flag_docker="${2:-'-i'}"
+local alias_selenium=$( detect_running )
+local container=$CONTAINER_APP
+#  commander "docker run --link $alias_selenium:selenium $volume_extra  $opts_gitlab $flag_docker -t $CONTAINER_APP bash -c '$cmd_start'"
+local port=4444
+local port_vlc=5999
+local cmd_ports="-p $port:$port -p $port_vlc:$port_vlc"
+local name_const=selenium
+local cmd_link="--link $name1:$name_const"
+commander "docker run $cmd_ports  $cmd_link $flag_docker $container bash < $file_test"
+}
+
+}
 run_webapp(){
   local cmd_start="${1:-'env'}"
   local flag_docker="${2:-'-i'}"
-local alias_selenium=$( $dir_root/DETECT/selenium_alias.sh )
+  local alias_selenium=$( detect_running )
   commander "docker run --link $alias_selenium:selenium $volume_extra  $opts_gitlab $flag_docker -t $CONTAINER_APP bash -c '$cmd_start'"
 }
 
