--- a/CFG/container.cfg
+++ b/CFG/container.cfg
@@ -1,30 +1,34 @@
 ######################################### RUN / LINK  -2-  CONTAINERS
 #docker run --link mongo_deamon:db -v /extra:/extra -i -t -e HOME=/home/gitlab_ci_runner -e CI_SERVER_URL=http://ci0.mean.io -e REGISTRATION_TOKEN=71f4b1fe380484bc57ad -e GITLAB_SERVER_FQDN=git.mean.io brownman/onbuild bash -c i
-detecte_running(){
+detect_running(){
 local exp=${1:-sel};
-local str=$( docker ps | awk '{print $11}' | grep $exp )
+local str=$( docker ps | awk '{print $11}' | grep $exp | cut -d',' -f1 )
 echo $str
 }
 
-run_sel(){
-$dir_root/TMP/link.sh
+run_selenium(){
+#commander $dir_root/TMP/link.sh
+docker run --privileged -p 4444:4444 -d --name selenium$(date +%s) eperoumalnaik/docker-chrome-selenium && { docker ps; }
+
 }
 
 run_tests(){
-local file_test=${1:-$dir_root/BIN/test.sh}
-local flag_docker="${2:-'-i'}"
-local alias_selenium=$( detect_running )
+local file_test="${1:-$dir_root/tests/gitlab_and_selenium.sh}"
+local flag_docker=${2:-'-i'}
+local exp='sel'
+local alias1=$( detect_running "$exp" )
+test -v alias1 || { trace "[err] can not detect alias which match $exp"; exit 0; }
 local container=$CONTAINER_APP
 #  commander "docker run --link $alias_selenium:selenium $volume_extra  $opts_gitlab $flag_docker -t $CONTAINER_APP bash -c '$cmd_start'"
 local port=4444
 local port_vlc=5999
 local cmd_ports="-p $port:$port -p $port_vlc:$port_vlc"
 local name_const=selenium
-local cmd_link="--link $name1:$name_const"
-commander "docker run $cmd_ports  $cmd_link $flag_docker $container bash < $file_test"
+local cmd_link="--link $alias1:$name_const"
+local cmd_volume="$volume_extra"
+commander "docker run $cmd_volume $cmd_link $flag_docker $container bash < $file_test"
 }
 
-}
 run_webapp(){
   local cmd_start="${1:-'env'}"
   local flag_docker="${2:-'-i'}"
@@ -69,3 +73,4 @@ export -f run_mongo
 export -f run_mongo_wrapper
 export -f run_webapp_interactive
 export -f run_webapp_deamon
+export -f run_selenium
