[ run selenium deamon ] - use $alias1 to store its new random name instead of parsing results of docker ps / docker inspect

--- a/CFG/container.cfg
+++ b/CFG/container.cfg
@@ -8,7 +8,14 @@ echo $str
 
 run_selenium(){
 #commander $dir_root/TMP/link.sh
-docker run --privileged -p 4444:4444 -d --name selenium$(date +%s) eperoumalnaik/docker-chrome-selenium && { docker ps; }
+#docker pull vvoyer/docker-selenium-firefox-chrome  
+commander test -v alias1
+commander test -n "$alias1"
+docker run --privileged -p 4444:4444 -d --name $alias1 vvoyer/docker-selenium-firefox-chrome  
+
+#docker run --privileged -p 4444:4444 -p 5999:5999 -d vvoyer/docker-selenium-firefox-chrome  
+
+#docker run --privileged -p 4444:4444 -d --name selenium$(date +%s) eperoumalnaik/docker-chrome-selenium && { docker ps; }
 
 }
 
@@ -16,8 +23,12 @@ run_tests(){
 local file_test="${1:-$dir_root/tests/gitlab_and_selenium.sh}"
 local flag_docker=${2:-'-i'}
 local exp='sel'
-local alias1=$( detect_running "$exp" )
+local alias1="$alias1"
+#$( detect_running "$exp" )
+
 test -v alias1 || { trace "[err] can not detect alias which match $exp"; exit 0; }
+
+commander test -n "$alias1"
 local container=$CONTAINER_APP
 #  commander "docker run --link $alias_selenium:selenium $volume_extra  $opts_gitlab $flag_docker -t $CONTAINER_APP bash -c '$cmd_start'"
 local port=4444
@@ -32,7 +43,8 @@ commander "docker run $cmd_volume $cmd_link $flag_docker $container bash < $file
 run_webapp(){
   local cmd_start="${1:-'env'}"
   local flag_docker="${2:-'-i'}"
-  local alias_selenium=$( detect_running )
+  local alias_selenium=$alias1
+  #( detect_running )
   commander "docker run --link $alias_selenium:selenium $volume_extra  $opts_gitlab $flag_docker -t $CONTAINER_APP bash -c '$cmd_start'"
 }
 
