--- a/CFG/vars.cfg
+++ b/CFG/vars.cfg
@@ -22,3 +22,5 @@ flag_mongo="--rest --httpinterface --smallfiles"
 ########################################### CONST
 DISKSPACE_PERCENT=80
 MONGO_PORT1=27017
+
+alias1="selenium$(date +%s)"
