--- a/CONF/private.conf
+++ b/CONF/private.conf
@@ -3,7 +3,7 @@
 #
 #
 #
-
+test -v CI_SERVER_URL || { echo 1>&2 gitlab-ci-runner need some system vars for registering itself with a gitlab-ci server; sleep 3; }
 export CI_SERVER_URL=${CI_SERVER_URL:-x1}
 export REGISTRATION_TOKEN=${REGISTRATION_TOKEN:-x2}
 export CI_SERVER_URL=${CI_SERVER_URL:-x3}
