[docker] - mount external volume using permission: read-only(ro)

--- a/CFG/vars.cfg
+++ b/CFG/vars.cfg
@@ -12,7 +12,7 @@ alias_selenium="selenium_deamon$(date +%S)"
 flag_docker_interactive='-i --rm'
 flag_docker_deamon='-d'
 ############################################ volumes
-volume_extra='-v /extra:/extra'
+volume_extra='-v /extra:/extra:ro'
 volume_data='-v /data:/data'
 ########################################### mongo conf
 flag_ports_sel='-p 4444:4444'
