[test container] docker for ionic [steps.sh] run deamon of mongo container [vars.cfg] - fix naming of var: flags_X

--- a/CFG/container.cfg
+++ b/CFG/container.cfg
@@ -9,9 +9,9 @@ echo $str
 run_selenium(){
 #commander $dir_root/TMP/link.sh
 #docker pull vvoyer/docker-selenium-firefox-chrome  
-commander test -v alias1
-commander test -n "$alias1"
-docker run --privileged -p 4444:4444 -d --name $alias1 vvoyer/docker-selenium-firefox-chrome  
+commander test -v alias_selenium
+commander test -n "$alias_selenium"
+docker run --privileged -p 4444:4444 -d --name $alias_selenium vvoyer/docker-selenium-firefox-chrome  
 
 #docker run --privileged -p 4444:4444 -p 5999:5999 -d vvoyer/docker-selenium-firefox-chrome  
 
@@ -23,19 +23,19 @@ run_tests(){
 local file_test="${1:-$dir_root/tests/gitlab_and_selenium.sh}"
 local flag_docker=${2:-'-i'}
 local exp='sel'
-local alias1="$alias1"
+local alias_selenium="$alias_selenium"
 #$( detect_running "$exp" )
 
-test -v alias1 || { trace "[err] can not detect alias which match $exp"; exit 0; }
+test -v alias_selenium || { trace "[err] can not detect alias which match $exp"; exit 0; }
 
-commander test -n "$alias1"
+commander test -n "$alias_selenium"
 local container=$CONTAINER_APP
 #  commander "docker run --link $alias_selenium:selenium $volume_extra  $opts_gitlab $flag_docker -t $CONTAINER_APP bash -c '$cmd_start'"
 local port=4444
 local port_vlc=5999
 local cmd_ports="-p $port:$port -p $port_vlc:$port_vlc"
 local name_const=selenium
-local cmd_link="--link $alias1:$name_const"
+local cmd_link="--link $alias_selenium:$name_const"
 local cmd_volume="$volume_extra"
 commander "docker run $cmd_volume $cmd_link $flag_docker $container bash < $file_test"
 }
@@ -43,9 +43,10 @@ commander "docker run $cmd_volume $cmd_link $flag_docker $container bash < $file
 run_webapp(){
   local cmd_start="${1:-'env'}"
   local flag_docker="${2:-'-i'}"
-  local alias_selenium=$alias1
+  test -v alias_selenium
+  test -v alias_mongo
   #( detect_running )
-  commander "docker run --link $alias_selenium:selenium $volume_extra  $opts_gitlab $flag_docker -t $CONTAINER_APP bash -c '$cmd_start'"
+  commander "docker run --link $alias_mongo:db --link $alias_selenium:selenium $volume_extra  $opts_gitlab $flag_docker -t $CONTAINER_APP bash -c '$cmd_start'"
 }
 
 
@@ -72,7 +73,7 @@ run_webapp_interactive(){
 
 run_mongo(){
 #use ensure
- commander "docker run $volume_data $flag_ports -d --name $alias_mongo $CONTAINER_DB sh -c 'mongod $flag_mongo'"; 
+ commander "docker run $volume_data $flag_ports_mongo -d --name $alias_mongo $CONTAINER_DB sh -c 'mongod $flag_mongo'"; 
 }
 
 run_mongo_wrapper(){
