--- a/CFG/vars.cfg
+++ b/CFG/vars.cfg
@@ -16,7 +16,7 @@ volume_extra='-v /extra:/extra:ro'
 volume_data='-v /data:/data'
 ########################################### mongo conf
 flag_ports_sel='-p 4444:4444'
-flag_ports='-p 27017:27017 -p 28017:28017'
+flag_ports_mongo='-p 27017:27017 -p 28017:28017'
 ###sh -c cmds
 flag_mongo="--rest --httpinterface --smallfiles"
 ########################################### CONST
