[steps.sh] fix mongo err - need volume: /data/db

--- a/CFG/container.cfg
+++ b/CFG/container.cfg
@@ -11,7 +11,7 @@ run_selenium(){
 #docker pull vvoyer/docker-selenium-firefox-chrome  
 commander test -v alias_selenium
 commander test -n "$alias_selenium"
-docker run --privileged -p 4444:4444 -d --name $alias_selenium vvoyer/docker-selenium-firefox-chrome  
+commander docker run --privileged -p 4444:4444 -d --name $alias_selenium vvoyer/docker-selenium-firefox-chrome  
 
 #docker run --privileged -p 4444:4444 -p 5999:5999 -d vvoyer/docker-selenium-firefox-chrome  
 
@@ -73,6 +73,7 @@ run_webapp_interactive(){
 
 run_mongo(){
 #use ensure
+    test -d /data/db || { mkdir -p /data/db; }
  commander "docker run $volume_data $flag_ports_mongo -d --name $alias_mongo $CONTAINER_DB sh -c 'mongod $flag_mongo'"; 
 }
 
