[steps] run test first

--- a/CFG/container.cfg
+++ b/CFG/container.cfg
@@ -20,7 +20,7 @@ commander docker run --privileged -p 4444:4444 -d --name $alias_selenium vvoyer/
 }
 
 run_tests(){
-local file_test="${1:-$dir_root/tests/gitlab_and_selenium.sh}"
+local file_test="${1:-$dir_root/tests/tests.sh}"
 local flag_docker=${2:-'-i'}
 local exp='sel'
 local alias_selenium="$alias_selenium"
