update selenium container

--- a/CFG/vars.cfg
+++ b/CFG/vars.cfg
@@ -4,6 +4,8 @@ cmd_gitlab_register='. ~/.profile && ./runner/bin/setup_and_run'
 CONTAINER_APP='brownman/onbuild' 
 CONTAINER_DB='brownman/mongo'         
 CONTAINER_SEL='eperoumalnaik/docker-chrome-selenium'
+CONTAINER_SEL2='vvoyer/docker-selenium-firefox-chrome'
+
 #CONTAINER_DB='dockerfile/mongodb'
 ############################################ aliases
 alias_mongo="mongo_deamon$(date +%S)"
