--- a/CFG/container.cfg
+++ b/CFG/container.cfg
@@ -11,7 +11,8 @@ run_selenium(){
 #docker pull vvoyer/docker-selenium-firefox-chrome  
 commander test -v alias_selenium
 commander test -n "$alias_selenium"
-commander docker run --privileged -p 4444:4444 -d --name $alias_selenium vvoyer/docker-selenium-firefox-chrome  
+commander docker run --privileged -p 4444:4444 -d --name $alias_selenium $CONTAINER_SEL2
+
 
 #docker run --privileged -p 4444:4444 -p 5999:5999 -d vvoyer/docker-selenium-firefox-chrome  
 
