[selenium] - use external script

--- a/CFG/vars.cfg
+++ b/CFG/vars.cfg
@@ -8,13 +8,18 @@ CONTAINER_SEL2='vvoyer/docker-selenium-firefox-chrome'
 
 #CONTAINER_DB='dockerfile/mongodb'
 ############################################ aliases
-alias_mongo="mongo_deamon$(date +%S)"
-alias_selenium="selenium_deamon$(date +%S)"
+alias_mongo="mongo_deamon$(date +%s)"
+export alias_selenium="selenium_deamon$(date +%s)"
 ############################################ docker flags
 flag_docker_interactive='-i --rm'
 flag_docker_deamon='-d'
 ############################################ volumes
 volume_extra='-v /extra:/extra:ro'
+
+volume_tmp='-v /tmp_docker:/tmp'
+
+volume_tmp2='-v /tmp_docker2:/tmp'
+
 volume_data='-v /data:/data'
 ########################################### mongo conf
 flag_ports_sel='-p 4444:4444'
