[selenium/] +container for phantomjs

--- a/CFG/helper.cfg
+++ b/CFG/helper.cfg
@@ -9,12 +9,22 @@ commander(){
     eval "$cmd" || { trace Err cmd; exit 0; }
    local res=$?
 trace "[res] $res" 
+echo $cmd >> /tmp/commands
 return $res
 }
 
 commander_exit(){
 commander $@ || { exit 1; }
 }
+kill_pids(){
+    test -f /tmp/pids && (
+while read line;do
+    kill $line
+done < /tmp/pids
+)
+
+}
 export -f commander
 export -f trace
 export -f commander_exit
+export -f kill_pids
