--- a/CFG/container.cfg
+++ b/CFG/container.cfg
@@ -11,7 +11,7 @@ run_selenium(){
 #docker pull vvoyer/docker-selenium-firefox-chrome  
 commander test -v alias_selenium
 commander test -n "$alias_selenium"
-commander docker run $volume_tmp --privileged -p 4444:4444 -d --name $alias_selenium $CONTAINER_SEL2
+commander docker run $volume_tmp --privileged -p 5999:5999 -p 4444:4444 -d --name $alias_selenium $CONTAINER_SEL2
 #docker pull vvoyer/docker-selenium-firefox-chrome
 #docker run --privileged -p 4444:4444 -p 5999:5999 -d vvoyer/docker-selenium-firefox-chrome 
 
@@ -48,7 +48,9 @@ run_webapp(){
   test -v alias_selenium
   test -v alias_mongo
   #( detect_running )
-  commander "docker run --link $alias_mongo:db --link $alias_selenium:selenium $volume_tmp2 $volume_extra  $opts_gitlab $flag_docker -t $CONTAINER_APP bash -c '$cmd_start'"
+  #commander "docker run --link $alias_mongo:db --link $alias_selenium:selenium $volume_tmp2 $volume_extra  $opts_gitlab $flag_docker -t $CONTAINER_APP bash -c '$cmd_start'" #with mongo
+
+  commander "docker run --link $alias_selenium:selenium $volume_tmp2 $volume_extra  $opts_gitlab $flag_docker -t $CONTAINER_APP bash -c '$cmd_start'"
 }
 
 
