--- a/CFG/container.cfg
+++ b/CFG/container.cfg
@@ -9,9 +9,14 @@ echo $str
 run_selenium(){
 #commander $dir_root/TMP/link.sh
 #docker pull vvoyer/docker-selenium-firefox-chrome  
+
+local cmd_env="-e SCREEN='Record VNC'"
 commander test -v alias_selenium
 commander test -n "$alias_selenium"
-commander docker run $volume_tmp --privileged -p 5999:5999 -p 4444:4444 -d --name $alias_selenium $CONTAINER_SEL2
+#commander docker run $volume_tmp $volume_build --privileged -p 5999:5999 -p 4444:4444 -d --name $alias_selenium $CONTAINER_SEL2
+commander docker run --privileged $cmd_env $volume_build $volume_tmp -p 4444:4444 -p 5999:5999 -d --name $alias_selenium lewisw/selenium
+
+
 #docker pull vvoyer/docker-selenium-firefox-chrome
 #docker run --privileged -p 4444:4444 -p 5999:5999 -d vvoyer/docker-selenium-firefox-chrome 
 
@@ -33,10 +38,10 @@ test -v alias_selenium || { trace "[err] can not detect alias which match $exp";
 commander test -n "$alias_selenium"
 local container=$CONTAINER_APP
 #  commander "docker run --link $alias_selenium:selenium $volume_extra  $opts_gitlab $flag_docker -t $CONTAINER_APP bash -c '$cmd_start'"
-local port=4444
-local port_vlc=5999
-local cmd_ports="-p $port:$port -p $port_vlc:$port_vlc"
-local name_const=selenium
+#local port=4444
+#local port_vlc=5999
+#local cmd_ports="-p $port:$port -p $port_vlc:$port_vlc"
+#local name_const=selenium
 local cmd_link="--link $alias_selenium:$name_const"
 local cmd_volume="$volume_extra"
 commander "docker run $volume_tmp2 $cmd_volume $cmd_link $flag_docker $container bash < $file_test"
@@ -49,8 +54,7 @@ run_webapp(){
   test -v alias_mongo
   #( detect_running )
   #commander "docker run --link $alias_mongo:db --link $alias_selenium:selenium $volume_tmp2 $volume_extra  $opts_gitlab $flag_docker -t $CONTAINER_APP bash -c '$cmd_start'" #with mongo
-
-  commander "docker run --link $alias_selenium:selenium $volume_tmp2 $volume_extra  $opts_gitlab $flag_docker -t $CONTAINER_APP bash -c '$cmd_start'"
+ commander "docker run  --link $alias_selenium:selenium $volume_tmp2 $volume_extra  $opts_gitlab $flag_docker -t $CONTAINER_APP bash -c '$cmd_start'"
 }
 
 
