--- a/CFG/vars.cfg
+++ b/CFG/vars.cfg
@@ -4,7 +4,9 @@ cmd_gitlab_register='. ~/.profile && ./runner/bin/setup_and_run'
 CONTAINER_APP='brownman/onbuild' 
 CONTAINER_DB='brownman/mongo'         
 CONTAINER_SEL='eperoumalnaik/docker-chrome-selenium'
-CONTAINER_SEL2='vvoyer/docker-selenium-firefox-chrome'
+CONTAINER_SEL3='vvoyer/docker-selenium-firefox-chrome'
+
+CONTAINER_SEL2='lewisw/selenium'
 
 #CONTAINER_DB='dockerfile/mongodb'
 ############################################ aliases
@@ -16,9 +18,18 @@ flag_docker_deamon='-d'
 ############################################ volumes
 volume_extra='-v /extra:/extra:ro'
 
-volume_tmp='-v /tmp_docker:/tmp'
+create_dir(){
+local dir=$1
+test -d $dir || { mkdir -p $dir; chmod 777 $dir; }
+}
 
-volume_tmp2='-v /tmp_docker2:/tmp'
+create_dir /tmp/build
+create_dir /tmp/11
+create_dir /tmp/22
+
+volume_tmp='-v /tmp/11:/tmp'
+volume_tmp2='-v /tmp/22:/tmp'
+volume_build='-v /tmp/build:/build'
 
 volume_data='-v /data:/data'
 ########################################### mongo conf
