--- a/source.cfg
+++ b/source.cfg
@@ -1,4 +1,5 @@
-dir_root=${dir_root:-.}
+dir_root=. #${dir_root:-.}
+source ../private.conf
 
 set_env(){
 export CONTAINER=$( head -1 $dir_root/container; )
